hard-gists/2894514/run.log
=== Docker Run Log for 2894514 ===
Started at: Mi 29. Okt 13:19:41 CET 2025

[2025-10-29 13:19:41] START: Running container for 2894514
[2025-10-29 13:19:41] SUCCESS: Container bbd9105e3d32a93f24a3f9e19cbd25801164272070b891e57d94d2f087ac4dc8 started for 2894514
=== Container logs for 2894514 ===
  File "/snippet.py", line 63
    print "Exiting"
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2894514 ===
[2025-10-29 13:19:43] INFO: Container bbd9105e3d32a93f24a3f9e19cbd25801164272070b891e57d94d2f087ac4dc8 has stopped
